# tlspool-gui

./: AUTHORS  CMakeLists.txt  INSTALL  README.md  TODO
doc/: Doxyfile
scripts/: doastyle.sh  generatefiles.sh
src/: localidselecetionthread.cpp  localidselecetionthread.h  main.cpp  pinentrydialog.cpp  pinentrydialog.h  pinentrythread.cpp  pinentrythread.h  resources.qrc  selectlocalidentitydialog.cpp  selectlocalidentitydialog.h  systemtrayitem.cpp  systemtrayitem.h  tlspoolguisettings.cpp  tlspoolguisettings.h  tlspoolinterface.cpp  tlspoolinterface.h
